arm: dts: apalis imx6: add 3rd pwms parameter
The imx pwm driver now support output inversion with a 3rd parameter.

While at it move the backlight pwm settings into the carrier board
file were it belongs. Period and polarity are carrier board / display
dependent.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
@@ -256,7 +256,7 @@
 		csi_id = <1>;
 		mclk = <22000000>;
 		mclk_source = <0>;
-		pwms = <&pwm3 0 45>;
+		pwms = <&pwm3 0 45 0>;
 		status = "okay";
 	};
 };
