arm: dts: imx6dl/imx6ull/imx7-colibri-eval-v3: fix mcp251x comment
There is no such thing as mpc258x but it is rather called mcp251x.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm/boot/dts/imx6dl-colibri-eval-v3.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-eval-v3.dts
@@ -90,7 +90,7 @@
 
 / {
 	clocks {
-		/* fixed crystal dedicated to mpc258x */
+		/* fixed crystal dedicated to mcp251x */
 		clk16m: clk@1 {
 			compatible = "fixed-clock";
 			reg=<1>;
