--- a/arch/arm/boot/dts/imx7s.dtsi
+++ b/arch/arm/boot/dts/imx7s.dtsi
@@ -90,6 +90,10 @@
 			clock-latency = <61036>; /* two CLK32 periods */
 			clocks = <&clks IMX7D_CLK_ARM>;
 			clock-names = "arm";
+			operating-points = <
+				/* KHz	uV */
+				792000	975000
+			>;
 		};
 	};
 
