ARM: dts: imx6: use SNVS RTC label
The SNVS RTC does not use an address in its node name anymore.
Instead of using the full path, simply use the SNVS RTC label.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis-ixora-v1.1.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-ixora-v1.1.dtsi
@@ -29,7 +29,7 @@
 
 	aliases {
 		rtc0 = &rtc_i2c;
-		rtc1 = "/soc/aips-bus@02000000/snvs@020cc000/snvs-rtc-lp@34";
+		rtc1 = &snvs_rtc;
 	};
 
 	gpio-keys {
