--- a/arch/arm/boot/dts/imx6dl-colibri-aster.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-aster.dts
@@ -213,7 +213,7 @@
 
 &usbotg {
 	status = "okay";
-	extcon = <&extcon_usbc_det>;
+	extcon = <&extcon_usbc_det>, <&extcon_usbc_det>;
 };
 
 /* MMC */
