ARM: dts: imx7-colibri: Specify cable detect as ID and VBUS pin
Commit 95c163471135 ("usb: chipidea: use of extcon framework to
work for non OTG case") requires both pins to be specified (ID and
VBUS pin) to work correctly.

Fix the remaining dts.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx7-colibri-aster.dtsi
+++ b/arch/arm/boot/dts/imx7-colibri-aster.dtsi
@@ -240,7 +240,7 @@
 };
 
 &usbotg1 {
-	extcon = <&extcon_usbc_det>;
+	extcon = <&extcon_usbc_det>,  <&extcon_usbc_det>;
 	vbus-supply = <&reg_usbh_vbus>;
 	status = "okay";
 };
