arm: dts: apalis imx6: add reset controller for atmel mxt multitouch
The Atmel maXTouch multitouch controller driver does not control the
reset line connected to the chip. Use a GPIO reset controller node to
release the reset line and make the controller work.

Note that both the reset controller's and the mxt mutitouch controller's
node are set to disabled. Either change this in the dtsi source or fix
this from U-Boot if you use an Atmel maXTouch multitouch controller.

setenv fdt_fixup 'fdt addr ${fdt_addr_r} && fdt set /soc/aips-bus@02100000/i2c@021a0000/atmel_mxt_ts@4a status okay && fdt set /mxt-reset status okay'

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
@@ -47,6 +47,14 @@
 		};
 	};
 
+	mxt_reset: mxt-reset {
+		compatible = "gpio-reset";
+		reset-gpios = <&gpio6 9 GPIO_ACTIVE_LOW>;
+		reset-delay-us = <1>;
+		#reset-cells = <0>;
+		status = "disabled";
+	};
+
 	v4l2_cap_0 {
 		compatible = "fsl,imx6q-v4l2-capture";
 		ipu_id = <0>;
@@ -159,6 +167,7 @@
 		reg = <0x4a>;
 		interrupt-parent = <&gpio6>;
 		interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
+		resets = <&mxt_reset>;
 		status = "disabled";
 	};
 
