arm: dts: apalis imx6: add timings for new 10 inch lvds
Add timings for LTTD1280800101-L4WH-CT1 panel used in the new
Capacitive Touch 10.1" LVDS display.

Note that the color mapping is to be set as follows:
fsl,data-mapping = "spwg";
fsl,data-width = <24>;

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis.dtsi
@@ -565,6 +565,22 @@
 				vsync-active = <0>;
 				pixelclk-active = <0>;
 			};
+			/* LTTD1280800101-L4WH-CT1, note that it needs
+			   fsl,data-mapping = "spwg"; fsl,data-width = <24>; */
+			timing_wxga1: 1280x800-1 {
+				clock-frequency = <71100000>;
+				hactive = <1280>;
+				vactive = <800>;
+				hback-porch = <60>;
+				hfront-porch = <60>;
+				vback-porch = <7>;
+				vfront-porch = <7>;
+				hsync-len = <40>;
+				vsync-len = <9>;
+				hsync-active = <0>;
+				vsync-active = <0>;
+				pixelclk-active = <0>;
+			};
 			timing_fullhd: 1920x1080 {
 				clock-frequency = <138500000>;
 				hactive = <1920>;
