arm: dts: apalis imx6: fix mipi-csi2 gpio assignment
The new Apalis iMX6 Mezzanine board allows access to the MIPI-CSI2
interface from the evaluation board. The current device tree has
different GPIO pin assignments for the camera reset and power pins.

Change the pin assignment to use Apalis GPIO1 for reset and Apalis
GPIO2 for power down.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
@@ -259,8 +259,8 @@
 		DOVDD-supply = <&reg_1p8v>;
 		AVDD-supply = <&reg_2p5v>;
 		DVDD-supply = <&reg_1p8v>;
-		pwn-gpios = <&gpio6 9 1>;
-		rst-gpios = <&gpio2 5 0>;
+		pwn-gpios = <&gpio2 5 GPIO_ACTIVE_HIGH>;
+		rst-gpios = <&gpio2 4 GPIO_ACTIVE_LOW>;
 		ipu_id = <0>;
 		csi_id = <1>;
 		mclk = <22000000>;
