dts: update/add atmel mxt
Add mxt nodes to dts and gpio-reset functionality.

Signed-off-by: Gerard Salvatella <gerard.salvatella@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis-ixora-v1.1.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-ixora-v1.1.dtsi
@@ -159,6 +159,7 @@
 		reg = <0x4a>;
 		interrupt-parent = <&gpio6>;
 		interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpios = <&gpio6 9 GPIO_ACTIVE_HIGH>; /* SODIMM 13 */
 		status = "disabled";
 	};
 
@@ -166,8 +167,8 @@
 		/* TouchRevolution Fusion 7 and 10 multi-touch controller */
 		compatible = "touchrevolution,fusion-f0710a";
 		reg = <0x10>;
-		gpios = <&gpio6 10 0 /* MXM3 11, Pen down interrupt */
-			 &gpio6  9 0 /* MXM3 13, Reset */
+		gpios = <&gpio6 10 GPIO_ACTIVE_HIGH /* MXM3 11, Pen down interrupt */
+			 &gpio6  9 GPIO_ACTIVE_HIGH /* MXM3 13, Reset */
 			>;
 	};
 
@@ -320,7 +321,7 @@
 };
 
 &pcie {
-	reset-ep-gpio = <&gpio1 28 0>;
+	reset-ep-gpio = <&gpio1 28 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 };
 
