--- a/arch/arm/boot/dts/imx6dl-colibri-aster.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-aster.dts
@@ -118,7 +118,8 @@
 		pinctrl-0 = <&pinctrl_mxt_ts>;
 		reg = <0x4a>;
 		interrupt-parent = <&gpio2>;
-		interrupts = <24 IRQ_TYPE_EDGE_FALLING>;
+		interrupts = <24 IRQ_TYPE_EDGE_FALLING>; /* SODIMM 107 */
+		reset-gpios = <&gpio1 14 GPIO_ACTIVE_HIGH>; /* SODIMM 106 */
 		/*
 		 * Note: When the status is set to okay, to avoid pinmux
 		 * conflict, one should remove the pinctrl_weim_cs1 and
