--- a/arch/arm/boot/dts/imx6dl-colibri-cam-eval-v3.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-cam-eval-v3.dts
@@ -113,6 +113,25 @@
  */
 &i2c3 {
 	status = "okay";
+
+	/* Atmel maxtouch controller */
+	atmel_mxt_ts: atmel_mxt_ts@4a {
+		compatible = "atmel,maxtouch";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_mxt_ts>;
+		reg = <0x4a>;
+		interrupt-parent = <&gpio2>;
+		interrupts = <24 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpios = <&gpio1 14 GPIO_ACTIVE_HIGH>; /* SODIMM 106 */
+		/*
+		 * Note: When the status is set to okay, to avoid pinmux
+		 * conflict, one should remove the pinctrl_weim_cs1 and
+		 * pinctrl_weim_cs2 pingroup from the weim pinctrl-0
+		 * property or disable weim node.
+		 */
+		status = "disabled";
+	};
+
 #ifdef PCAP /* not standard pinout, disable PWM<B>, PWM<C> */
 	pcap@10 {
 		/* TouchRevolution Fusion 7 and 10 multi-touch controller */
@@ -202,6 +221,13 @@
 			fsl,pins = <
 				MX6QDL_PAD_GPIO_9__GPIO1_IO09	PAD_CTRL_HYS_PD /* SODIMM 28 */
 				MX6QDL_PAD_SD4_DAT2__GPIO2_IO10	PAD_CTRL_HYS_PD /* SODIMM 30 */
+			>;
+		};
+
+		pinctrl_mxt_ts: mxt-ts {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_CS1__GPIO2_IO24	PAD_CTRL_HYS_PD /* SODIMM 107 */
+				MX6QDL_PAD_SD2_DAT1__GPIO1_IO14	PAD_CTRL_HYS_PD /* SODIMM 106 */
 			>;
 		};
 	};
