--- a/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-eval.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2016 Toradex AG
+ * Copyright 2014-2017 Toradex AG
  * Copyright 2012 Freescale Semiconductor, Inc.
  * Copyright 2011 Linaro Ltd.
  *
@@ -45,14 +45,6 @@
 			debounce-interval = <10>;
 			gpio-key,wakeup;
 		};
-	};
-
-	mxt_reset: mxt-reset {
-		compatible = "gpio-reset";
-		reset-gpios = <&gpio6 9 GPIO_ACTIVE_LOW>;
-		reset-delay-us = <1>;
-		#reset-cells = <0>;
-		status = "disabled";
 	};
 
 	v4l2_cap_0 {
@@ -167,7 +159,7 @@
 		reg = <0x4a>;
 		interrupt-parent = <&gpio6>;
 		interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
-		resets = <&mxt_reset>;
+		reset-gpios = <&gpio6 9 GPIO_ACTIVE_HIGH>; /* SODIMM 13 */
 		status = "disabled";
 	};
 
