dts: enable hdmi also on aster
Signed-off-by: Gerard Salvatella <gerard.salvatella@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm/boot/dts/imx6dl-colibri-aster.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-aster.dts
@@ -23,6 +23,7 @@
 	compatible = "toradex,colibri_imx6dl-aster", "toradex,colibri_imx6dl", "fsl,imx6dl";
 
 	aliases {
+		i2c0 = &i2cddc;
 		i2c1 = &i2c2;
 		i2c2 = &i2c3;
 	};
