dts: synchronize snvs node path
Synchronize with commit fcfdb9c32075501e64751cc6a79fd91d15933692

Signed-off-by: Gerard Salvatella <gerard.salvatella@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm/boot/dts/imx6dl-colibri-cam-eval-v3.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-cam-eval-v3.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2015 Toradex AG
+ * Copyright 2014-2018 Toradex AG
  * Copyright 2012 Freescale Semiconductor, Inc.
  * Copyright 2011 Linaro Ltd.
  *
@@ -34,7 +34,7 @@
 
 	aliases {
 		rtc0 = &rtc_i2c;
-		rtc1 = "/soc/aips-bus@02000000/snvs@020cc000/snvs-rtc-lp@34";
+		rtc1 = &snvs_rtc;
 	};
 
 	aliases {
