ARM: dts: imx6: mux SD/MMC CD and SPI CS explicitly
Use a pinmux configuration for SD/MMC card detect and SPI chip
select instead of relying on reset/boot settings. There have
been no adverse effects observed, but it seems sensible to mux
the pads explicitly.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-colibri.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-colibri.dtsi
@@ -570,7 +570,7 @@
 #endif
 		pinctrl_spi_cs1: spi_cs1 {
 			fsl,pins = <
-				MX6QDL_PAD_EIM_A25__GPIO5_IO02		PAD_CTRL_NO	/* SPI cs */
+				MX6QDL_PAD_EIM_A25__GPIO5_IO02		PAD_CTRL_HYS_PU	/* SPI cs */
 			>;
 		};
 		pinctrl_touch_int_1: touch_int-1 {
@@ -775,7 +775,7 @@
 	usdhc {
 		pinctrl_mmc_cd: gpio_mmc_cd {
 			fsl,pins = <
-				MX6QDL_PAD_NANDF_D5__GPIO2_IO05		PAD_CTRL_NO	/* MMC1 CD */
+				MX6QDL_PAD_NANDF_D5__GPIO2_IO05		PAD_CTRL_HYS_PU	/* MMC1 CD */
 			>;
 		};
 		pinctrl_usdhc1: usdhc1grp {
