ARM: dts: imx6: add missing uart transceiver enable pinmux
This adds the enable-pin to uart2 that controls the transceiver for uart2/4.

Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
(cherry picked from commit 07a8f35650e711666cf42f4962792d87b3b39b09)

--- a/arch/arm/boot/dts/imx6qdl-apalis-ixora-v1.1.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-ixora-v1.1.dtsi
@@ -292,6 +292,12 @@
 			MX6QDL_PAD_NANDF_D2__GPIO2_IO02 PAD_CTRL_HYS_PU
 		>;
 	};
+
+	pinctrl_uart24_forceoff: uart24_forceoff {
+		fsl,pins = <
+			MX6QDL_PAD_SD2_CMD__GPIO1_IO11 PAD_CTRL_HYS_PU
+		>;
+	};
 };
 
 &lcd {
@@ -373,6 +379,8 @@
 
 &uart2 {
 	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart2_dte &pinctrl_uart24_forceoff>;
 #if 0
 	linux,rs485-enabled-at-boot-time;
 	rs485-rts-active-low;
@@ -382,6 +390,10 @@
 
 &uart4 {
 	status = "okay";
+	/*
+	 * note that uart4 is only working with pinctrl_uart24_forceoff that is
+	 * already defined in &uart2
+	 */
 };
 
 &uart5 {
