--- a/arch/arm/boot/dts/imx6qdl-apalis-ixora.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis-ixora.dtsi
@@ -270,6 +270,12 @@
 			MX6QDL_PAD_NANDF_D2__GPIO2_IO02 PAD_CTRL_HYS_PU
 		>;
 	};
+
+	pinctrl_uart24_forceoff: uart24_forceoff {
+		fsl,pins = <
+			MX6QDL_PAD_DI0_PIN4__GPIO4_IO20 PAD_CTRL_HYS_PU
+		>;
+	};
 };
 
 &lcd {
@@ -343,6 +349,8 @@
 
 &uart2 {
 	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart2_dte &pinctrl_uart24_forceoff>;
 #if 0
 	linux,rs485-enabled-at-boot-time;
 	rs485-rts-active-low;
@@ -352,6 +360,10 @@
 
 &uart4 {
 	status = "okay";
+	/*
+	 * note that uart4 is also depending on pinctrl_uart24_forceoff that is
+	 * already defined in &uart2
+	 */
 };
 
 &uart5 {
