Update PCIe host driver  - Add external ref. clock option  - Add SI test mode
Change-Id: Idb3df04b3a7d042a29c11aa1f98cb0d92be1b072

--- a/arch/arm/boot/dts/tcc/tcc899x.dtsi
+++ b/arch/arm/boot/dts/tcc/tcc899x.dtsi
@@ -1377,7 +1377,8 @@
 		interrupt-map = <0 0 0 0 &gic GIC_SPI 138 IRQ_TYPE_LEVEL_HIGH>;
 		num-lanes = <1>;
 		num-viewport = <4>;
-
+		using_ext_ref_clk = <1>;
+		for_si_test = <0>;
 
 		status = "disabled";
 	};
