Enable CONFIG_HW_RANDOM_TCC (H/W Random Number Generator) on tcc899x_android_stb_defconfig
Change-Id: I7151e79384a8cda2948c48f13a4bee9f95b07430

--- a/arch/arm/configs/tcc899x_android_stb_defconfig
+++ b/arch/arm/configs/tcc899x_android_stb_defconfig
@@ -326,6 +326,8 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_TCC_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_TCC_WATCHDOG=y
+CONFIG_HW_RANDOM=y
+CONFIG_HW_RANDOM_TCC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_GPIO=y
